kubernetes/platform/jenkins/manifest/test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nfs-busybox
  template:
    metadata:
      labels:
        name: nfs-busybox
    spec:
      serviceAccountName: jenkins-admin
      containers:
      - image: busybox
        command:
          - sh
          - -c
          - 'while true; do date > /mnt/xxx.html; hostname >> /mnt/xxx.html; sleep $(($RANDOM % 5 + 5)); done'
        imagePullPolicy: IfNotPresent
        name: busybox
        volumeMounts:
          # name must match the volume name below
          - name: my-pvc-nfs
            mountPath: "/mnt"
      volumes:
      - name: my-pvc-nfs
        persistentVolumeClaim:
          claimName: jenkins-pvc
