kubernetes/platform/jenkins/manifest/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server-service
  namespace: jenkins
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    service_name: nfs-server
  type: ClusterIP
