kubernetes/platform/jenkins/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: "jenkins-ic.staging.tentanganak.id"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
